Thu Aug  5 00:20:47 1999  Jeffrey A Law  (law@cygnus.com)

	* m68k.md (xordi3, anddi3): These patterns are not available on
	the coldfire.

Wed Aug  4 23:39:20 1999  Mark Mitchell  <mark@codesourcery.com>

	* real.c (GET_REAL): Don't violate ANSI/ISO aliasing rules.
	(PUT_REAL): Likewise.

Wed Aug  4 02:15:32 1999  Richard Henderson <rth@cygnus.com>

	* jump.c (delete_insn): Delete the addr_vec when deleting a tablejump.

Wed Aug  4 01:08:44 1999  Jeffrey A Law  (law@cygnus.com)

        * flow.c (delete_unreachable_blocks): Do not call merge_blocks
        or tidy_fallthru_edge if the last insn in the block is not
        an unconditional jump or a simple conditional jump.

Tue Aug  3 03:51:20 1999  Jeffrey A Law  (law@cygnus.com)

	* cse.c (cse_insn): Fix dumb thinko in last change.

Mon Aug  2 23:45:45 1999  Hans-Peter Nilsson  <hp@bitrange.com>

	* dwarf2out.c (add_location_or_const_value_attribute): Correct
	test for sizes of passed and declared parameter types.

Mon Aug  2 12:45:09 1999  Richard Henderson  <rth@cygnus.com>

	* alpha.c (override_options): Don't force ALPHA_TP_PROG for ev6.

Mon Aug  2 01:34:22 1999  Jeffrey A Law  (law@cygnus.com)

	* fix-header.c (main): When testing for CONTINUED, use string
	equality, not pointer equality.

Mon Aug  2 01:27:24 1999  Dan Nicolaescu  <dann@ics.uci.edu>

	* sparc.c (sparc_block_profiler): Use the %g2 register, not %o0.

Sun Aug  1 22:46:42 1999  Jeffrey A Law  (law@cygnus.com)

	* cse.c (cse_insn): Fix loop which deletes insns after a jump
	that has become an unconditional jump.

	* m68k.c (output_function_prologue): Fix typo in CPU32 case.
	(output_function_epilogue): Similarly.

	Tue Jul 20 12:37:30 1999  Hans-Peter Nilsson  <hp@bitrange.com>
        * dwarf2out.c (output_abbrev_section): Terminate with a zero.

	Thu Jul 15 15:40:09 1999  Jim Wilson  <wilson@cygnus.com>
	* tree.c (build_type_attribute_variant): Move current_obstack restore
	after build_qualified_type call.
